--- a/application/flicket/templates/flicket_base.html
+++ b/application/flicket/templates/flicket_base.html
@@ -44,7 +44,7 @@
             <div class="col pt-5" style="font-size: 2rem">
                 {{ g.application_title }}
                 <span style="font-size: 0.8rem; color: #d5d2cf">
-                    {{ _('a simple ticket system') }}
+                    {{ _('Sistema de Tickets') }}
                 </span>
             </div>
         </div>
