--- a/application/flicket/templates/flicket_footer.html
+++ b/application/flicket/templates/flicket_footer.html
@@ -1,6 +1,5 @@
 <!-- footer -->
 <footer>
-    Flicket {{ g.__version__ }} &copy; {{ now_year() }}  <a href="mailto:evereux@gmail.com">Paul Bourne</a> |
-    {{ _('Source code available at:') }} <a href="https://github.com/evereux/flicket">Github</a>.
+    flicket Fibra Colombia
 </footer>
 <!-- end footer -->
