--- a/application/flicket/templates/flicket_base.html
+++ b/application/flicket/templates/flicket_base.html
@@ -42,7 +42,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col pt-5" style="font-size: 2rem">
-                {{ g.application_title }}
+                <img src="{{ url_for('flicket_bp.static', filename='logo-onnetfibra.svg') }}" alt="ONNET Fibra" style="height: 50px; vertical-align: middle;">
                 <span style="font-size: 0.8rem; color: #d5d2cf">
                     {{ _('Sistema de Tickets') }}
                 </span>
