--- a/application/flicket/static/css/flicket.css
+++ b/application/flicket/static/css/flicket.css
@@ -12,16 +12,16 @@
 }
 
 .btn-primary {
-    background-color: #0000b4;
-    border-color: #0000b4;
+    background-color: #001F54; /* Navy Blue */
+    border-color: #001F54;
 }
 
 .btn-outline-primary {
-    border-color: #0000b4;
+    border-color: #001F54;
 }
 
 .active {
-    background-color: #0000b4;
+    background-color: #001F54;
 }
 
 body {
@@ -30,7 +30,7 @@ body {
 }
 
 blockquote {
-    background-color: #faf7d7;
+    background-color: #e0f7fa; /* Light Cyan */
     font-size: inherit
 }
 
@@ -39,7 +39,7 @@ h1 {
 }
 
 .navbar-flicket {
-    border-bottom: 1px solid rgba(0, 0, 128, 1);
+    border-bottom: 1px solid #001F54; /* Navy Blue */
 }
 
 /*noinspection CssInvalidFunction*/
@@ -47,15 +47,15 @@ footer {
     font-size: 0.7rem;
     color: darkslategray;
     text-align: center;
-    border-top: solid 1px #F1592A;
+    border-top: solid 1px #001F54; /* Navy Blue */
     padding: 0.4rem;
     margin-top: 2rem;
-    background: -moz-linear-gradient(left, rgba(241, 86, 39, 1) 0%, rgba(237, 187, 173, 1) 61%, rgba(237, 187, 173, 1) 100%);
-    background: -webkit-gradient(left top, right top, color-stop(0%, rgba(241, 86, 39, 1)), color-stop(61%, rgba(237, 187, 173, 1)), color-stop(100%, rgba(237, 187, 173, 1)));
-    background: -webkit-linear-gradient(left, rgba(241, 86, 39, 1) 0%, rgba(237, 187, 173, 1) 61%, rgba(237, 187, 173, 1) 100%);
-    background: -o-linear-gradient(left, rgba(241, 86, 39, 1) 0%, rgba(237, 187, 173, 1) 61%, rgba(237, 187, 173, 1) 100%);
-    background: -ms-linear-gradient(left, rgba(241, 86, 39, 1) 0%, rgba(237, 187, 173, 1) 61%, rgba(237, 187, 173, 1) 100%);
-    background: linear-gradient(to right, rgba(241, 86, 39, 1) 0%, rgba(237, 187, 173, 1) 61%, rgba(237, 187, 173, 1) 100%);
+    background: -moz-linear-gradient(left, rgba(0, 0, 128, 1) 0%, rgba(0, 191, 255, 1) 50%, rgba(135, 206, 250, 1) 100%);
+    background: -webkit-gradient(left top, right top, color-stop(0%, rgba(0, 0, 128, 1)), color-stop(50%, rgba(0, 191, 255, 1)), color-stop(100%, rgba(135, 206, 250, 1)));
+    background: -webkit-linear-gradient(left, rgba(0, 0, 128, 1) 0%, rgba(0, 191, 255, 1) 50%, rgba(135, 206, 250, 1) 100%);
+    background: -o-linear-gradient(left, rgba(0, 0, 128, 1) 0%, rgba(0, 191, 255, 1) 50%, rgba(135, 206, 250, 1) 100%);
+    background: -ms-linear-gradient(left, rgba(0, 0, 128, 1) 0%, rgba(0, 191, 255, 1) 50%, rgba(135, 206, 250, 1) 100%);
+    background: linear-gradient(to right, rgba(0, 0, 128, 1) 0%, rgba(0, 191, 255, 1) 50%, rgba(135, 206, 250, 1) 100%);
 }
 
 header {
@@ -86,7 +86,7 @@ input[type="radio"] {
 }
 
 .flicket-action {
-    background-color: rgba(254, 203, 190, 0.3);
+    background-color: rgba(0, 191, 255, 0.3); /* Light Blue */
     font-size: 0.8rem;
 }
 
@@ -95,13 +95,12 @@ input[type="radio"] {
 }
 
 .flicket-avatar-admin {
-    color: red
+    color: red;
 }
 
 .flicket-avatar-super {
     color: #0c5460;
 }
-
 
 .white_space {
     white-space: pre-wrap;
@@ -111,7 +110,7 @@ input[type="radio"] {
     margin-top: 10px;
     border: solid 1px silver;
     border-radius: 3px;
-    background-color: #e8f5f3;
+    background-color: #e0f7fa; /* Light Cyan */
     padding: 10px;
     display: none;
 }
@@ -121,7 +120,7 @@ input[type="radio"] {
 }
 
 .flicket-tickets-header {
-    background-color: #F5F5F5;
+    background-color: #f5f5f5;
 }
 
 .flicket-tickets-header-a:link, .flicket-tickets-header-a:hover, .flicket-tickets-header-a:visited {
@@ -130,7 +129,7 @@ input[type="radio"] {
 
 .flicket-tickets-title {
     font-size: 0.8rem;
-    color: #659dca;
+    color: #001F54; /* Navy Blue */
 }
 
 .flicket-tickets-content {
@@ -143,7 +142,6 @@ input[type="radio"] {
 
 .flicket-status-high {
     border-bottom: red solid 0.3rem;
-
 }
 
 .flicket-status-medium {
@@ -165,7 +163,6 @@ td {
 .flicket-top-buffer {
     margin-top: 20px;
 }
-
 
 .oi-flicket-cl-dg {
     fill: #000000;
